# omcp

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sample.env
.github/workflows/: lint-and-test.yml  publish-docs.yml  pytest.yml
app/: main.py
app/api/: models.py  routes.py
app/core/: config.py  logging_setup.py
app/services/: agent_service.py  ollama_service.py  sql_service.py  validation.py
config/: config.json  logging.json
contributing/: index.html
docs/: contributing.md  index.md  installation.md
docs/sql/: execution.md  index.md  validation.md
installation/: index.html
old/: db.py.backup2  main.py.backup
schemas/: omop_validation_rules.json
search/: search_index.json
sql/: index.html
sql/execution/: index.html
sql/validation/: index.html
src/omcp/: config.py  db.py  db_robust.py  exceptions.py  main.py  main_robust.py  sql_validator.py  trace_context.py  transpiler.py
synthetic_data/: synthea.duckdb
tests/: conftest.py  test_sql_validator.py
